--- a/TVAPPweb/src/theme/variables.scss
+++ b/TVAPPweb/src/theme/variables.scss
@@ -159,6 +159,12 @@ ion-navbar{
   background-position: right bottom,left bottom;
   background-size: 14%,auto;
 }
+.bgimg3{
+  background-image: url("../assets/imgs/logo.png");
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-size: 14%;
+}
 
 .shadow{text-shadow: black 0.05em 0.05em 0.05em}
 .shadow2{text-shadow: white 0.05em 0.05em 0.05em}
